--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/80101cb6c2.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
     <title>Bem-Vindo</title>
 </head>
+
 <body>
     <header>
         <div>
-            <img src="" alt="">
+            <img src="img/logo.gif" alt="Logo: Douglas Machado; qualidade, agilidade">
         </div>
         <ul>
             <li>
-                 <a href="https://github.com/douglads">github</a>
+                <a href="https://github.com/douglads">github</a>
             </li>
             <li>
                 <a href="mailto:douglasfm1995@gmail.com">email</a>
@@ -26,7 +31,7 @@
         </ul>
     </header>
     <main>
-        <section class="container"></section>
+        <section class="container">
             <div class="name">
                 <h1>Douglas Machado</h1>
                 <H5>Full-Stack Developer</H5>
@@ -36,12 +41,17 @@
             </div>
 
             <div id="about">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quae omnis amet id accusantium incidunt esse sequi alias sed repudiandae suscipit neque, modi placeat aperiam quas, mollitia sint tempora porro voluptatibus dolorem adipisci est molestiae sit. Delectus facilis quod excepturi optio necessitatibus enim a. Provident assumenda iure quo dolores neque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quae omnis amet id accusantium incidunt
+                    esse sequi alias sed repudiandae suscipit neque, modi placeat aperiam quas, mollitia sint tempora
+                    porro voluptatibus dolorem adipisci est molestiae sit. Delectus facilis quod excepturi optio
+                    necessitatibus enim a. Provident assumenda iure quo dolores neque.</p>
             </div>
-            <div class="forme">
-                <input type="text" placeholder="seu melhor email">
-                <button>enviar!</button>
-            </div>
+        </section>
+        <div class="forme">
+            <input type="text" placeholder="seu melhor email">
+            <button>enviar!</button>
+        </div>
     </main>
 </body>
+
 </html>
