--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div>
-            <img src="img/logo.gif" alt="Logo: Douglas Machado; qualidade, agilidade">
+            <!--img src="img/logo.gif" alt="Logo: Douglas Machado; qualidade, agilidade" -->
         </div>
         <ul>
             <li>
@@ -47,7 +47,7 @@
                     necessitatibus enim a. Provident assumenda iure quo dolores neque.</p>
             </div>
         </section>
-        <div class="forme">
+        <div class="form">
             <input type="text" placeholder="seu melhor email">
             <button>enviar!</button>
         </div>
