Adicionando flexbox nos itens e deixando mais bonitinho

--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
 <body>
     <header>
         <div>
-            <!--img src="img/logo.gif" alt="Logo: Douglas Machado; qualidade, agilidade" -->
+            <img src="img/logoport.jpg" alt="Logo: escrito Douglas Machado, seguido de sinal de maior e lupa e sinal de menor"></img>
         </div>
         <ul>
             <li>
                 <a href="https://github.com/douglads">github</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/douglas-machado-6000b9236/">linkedin</a>
             </li>
             <li>
                 <a href="mailto:douglasfm1995@gmail.com">email</a>
@@ -41,10 +44,8 @@
             </div>
 
             <div id="about">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quae omnis amet id accusantium incidunt
-                    esse sequi alias sed repudiandae suscipit neque, modi placeat aperiam quas, mollitia sint tempora
-                    porro voluptatibus dolorem adipisci est molestiae sit. Delectus facilis quod excepturi optio
-                    necessitatibus enim a. Provident assumenda iure quo dolores neque.</p>
+                <p>Estudante de Análise e Desenvolvimento de Sistemas, técnico em administração e auxiliar de TI. Atualmente encontro-me desempregado, já cursei biotecnologia e desisti no penúltimo semestre, embora ainda continue ainda sendo uma de minhas paixões,
+                Sempre fui curioso e desmontava coisas para arruma-las, atualmente faço reparos em computadores.</p>
             </div>
         </section>
         <div class="form">
