Alterando a logo, e colocando animações

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div>
-            <img src="img/logoport.jpg" alt="Logo: escrito Douglas Machado, seguido de sinal de maior e lupa e sinal de menor"></img>
+            <img id="logo" src="img/logoport.png" alt="Logo: escrito Douglas Machado, seguido de sinal de maior e lupa e sinal de menor"></img>
         </div>
         <ul>
             <li>
@@ -26,7 +26,7 @@
                 <a href="https://www.linkedin.com/in/douglas-machado-6000b9236/">linkedin</a>
             </li>
             <li>
-                <a href="mailto:douglasfm1995@gmail.com">email</a>
+                <a href="mailto:douglasfm1995@gmail.com">e-mail</a>
             </li>
             <li>
                 <a href="https://wa.me/15997120495">whatsapp</a>
